--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -121,7 +121,7 @@
 
 .intro{
     display: flex;
-    /* flex-direction: column; */
+    flex-direction: column;
     text-align: justify;
     padding: 10px;
 }
@@ -143,6 +143,10 @@
 #portfolio{
     display: flex;
     background-color: lightgray;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 600px;
 }
 
 .gallery{
@@ -150,9 +154,22 @@
 }
 
 .gallery img{
+    display: flex;
     width: 750px;
     height: auto;
-    margin: 50px;
+    margin: -30px;
+}
+
+.github{
+    color: blue;
+    font-size: 30px;
+    position: relative;
+    bottom: -50px;
+}
+
+.github:hover{
+    cursor: pointer;
+    box-shadow: 0 0 10px green;
 }
 
 /* ContactSection */
@@ -161,7 +178,7 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: grey;
     color: white;
     padding: 20px;
 }
@@ -197,10 +214,21 @@
     outline: none;
 }
 
+.linkedin{
+    color: white;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 28px;
+}
+
 #send:hover{
     cursor: pointer;
-    box-shadow: 0 0 10px white;
+    box-shadow: 0 0 10px blue;
 }
+
 
 /* Footer */
 
@@ -210,6 +238,7 @@
     background-color: lightgrey;
     font-size: 30px;
 }
+
 
 /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
 @media screen and (max-width: 575px) {
